# LiveRecorder-1

./: .gitignore  LICENSE  README.md  README_PYPI.md  StopRecording.vbs  demo.py  ffmpeg_install.py  i18n.py  index.html  main.py  msg_push.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: sync.yml
config/: URL_config.ini.example  config.ini  config.ini.example
douyinliverecorder/: stream.py
i18n/zh_TW/LC_MESSAGES/: zh_TW.mo  zh_TW.po
streamget/: initializer.py  proxy.py  room.py  spider.py  stream.py  utils.py
streamget/javascript/: taobao-sign.js
