[project]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "LiveRecorder-1"
version = "4.0.1"
description = "An easy tool for recording live streams"
authors = ["SAOJSM"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SAOJSM/LiveRecorder-1"
repository = "https://github.com/SAOJSM/LiveRecorder-1"
keywords = ["douyin", "live", "recorder"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
PyExecJS = "^1.5.1"
loguru = "^0.5.3"
pycryptodome = "^3.10.1"
distro = "^1.9.0"
tqdm = "^4.66.5"
